--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,3 +1,7 @@
+---
+import ThemeToggler from './theme-toggler.astro';
+---
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -29,7 +33,7 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <button class="btn btn-outline-success" type="button"><i class="bi bi-brightness-low-fill"></i></button>
+      <ThemeToggler />
     </div>
   </div>
 </nav>
