feat: add navbar

--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -1,6 +1,9 @@
 // Required functions import
 @import 'bootstrap/scss/functions';
 
+// Import Bootstrap Icons
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 // Optional variable overrides
 $primary: #ffa500;
 
