--- a/src/components/theme-toggler.astro
+++ b/src/components/theme-toggler.astro
@@ -1,6 +1,7 @@
-<button class="btn p-0" id="bd-theme" type="button" aria-label="Toggle theme">
+<button class="btn ps-lg-2 ps-0 pe-2 py-1" id="bd-theme" type="button" aria-label="Toggle theme">
   <i id="moon-icon" class="bi bi-moon-fill d-none"></i>
   <i id="sun-icon" class="bi bi-sun-fill"></i>
+
   <script>
     const themeToggleBtn = document.getElementById('bd-theme')!;
     const htmlElement = document.documentElement;
