--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -5,7 +5,8 @@
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
 // Optional variable overrides
-$primary: #ffa500;
+$primary: #00a8a5;
+$secondary: #0861c5;
 
 // Required imports
 @import 'bootstrap/scss/variables';
