--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -264,7 +264,8 @@ import ThemeToggler from './theme-toggler.astro';
   .search-key {
     align-items: center;
     background-color: var(--bs-tertiary-bg);
-    border: 2px solid var(--bs-border-color);
+    border: 1px solid var(--bs-border-color);
+    border-bottom: 2px solid var(--bs-gray-500);
     border-radius: 0.25rem;
     color: var(--bs-secondary-color);
     display: inline-flex;
@@ -274,7 +275,7 @@ import ThemeToggler from './theme-toggler.astro';
     justify-content: center;
     line-height: 1.2;
     min-width: 1.2em;
-    padding: 0 0.3em;
+    padding: 0 0.5em;
     white-space: nowrap;
   }
 
