--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/footer.astro';
 import Navbar from '../components/navbar.astro';
 import '../styles/bootstrap.scss';
 
@@ -57,6 +58,8 @@ const fullOgImageUrl = new URL(ogImage, baseUrl).href;
     <main id="main-content">
       <slot />
     </main>
+    <Footer />
+
     <script>
       // Import only what you need
       // import 'bootstrap/js/dist/alert';
