--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -79,3 +79,10 @@ const fullOgImageUrl = new URL(ogImage, baseUrl).href;
     </script>
   </body>
 </html>
+
+<style is:inline>
+  * {
+    font-family: LINESeed, sans-serif;
+    letter-spacing: 0.05em;
+  }
+</style>
