feat: add email link at footer

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -32,7 +32,7 @@ if (isNotesRoute) {
 }
 ---
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+<nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
   <div class="container">
     <!-- Brand -->
     <a class="navbar-brand me-4 d-lg-none" href="/">
