--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -85,4 +85,8 @@ const fullOgImageUrl = new URL(ogImage, baseUrl).href;
     font-family: LINESeed, sans-serif;
     letter-spacing: 0.05em;
   }
+
+  #main-content {
+    min-height: calc(100vh - 58px);
+  }
 </style>
