--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,1 +1,6 @@
-<footer class="py-3 bg-body-secondary text-center">Pen's Pulse © 2025</footer>
+<footer class="py-3 bg-body-secondary text-center">
+  <div>
+    © 2025 Pen's Pulse. All rights reserved. |
+    <a href="mailto:penspulse@gmail.com" class="text-decoration-none">✉️ penspulse@gmail.com</a>
+  </div>
+</footer>
