--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -7,6 +7,7 @@
 // Optional variable overrides
 $primary: #00a8a5;
 $secondary: #0861c5;
+$enable-negative-margins: true;
 
 // Required imports
 @import 'bootstrap/scss/variables';
